# ble-mesh-ips

./: README.md
BEC-BLE/: CMakeLists.txt  prj.conf
locationServer/: CMakeLists.txt  prj.conf
locationServer/build_dk/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
locationServer/build_dk/Kconfig/: Kconfig.shield.defconfig
locationServer/build_dk/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  cmake_install.cmake  dev_graph.dot  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts.pre  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.map  zephyr_pre1.map
locationServer/build_xi/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake
locationServer/build_xi/Kconfig/: Kconfig.modules  Kconfig.shield.defconfig
locationServer/build_xi/zephyr/: .cmake.dotconfig.checksum  .config  .config.old  Documents - Shortcut.lnk  cmake_install.cmake  dev_graph.dot  dev_handles.c  edt.pickle  isr_tables.c  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  linker_zephyr_pre1.cmd.dep  runners.yaml  zephyr.dts.pre  zephyr.hex  zephyr.stat  zephyr.uf2  zephyr_final.map  zephyr_pre0.map  zephyr_pre1.map
locationServer/include/: model_manager.h  persistant_store_manager.h  prov_conf.h
locationServer/src/: main.c
locationServer/src/mesh/: model_manager.c  persistant_store_manager.c  prov_conf.c
(+409 files in other folders)
